# Chess-GUI

./: BoardState.cpp  BoardState.h  Box.h  CMakeLists.txt  KingThreatenedInfo.h  LICENSE  Move.h  MoveStack.cpp  MoveStack.h  Piece.cpp  Piece.h  PieceLocations.cpp  PieceLocations.h  README.md  StoreMove.cpp  StoreMove.h  build_with_vcpkg.bat  install_with_vcpkg.bat  main.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
images/: README.md
